# lumux

./: .gitignore  flake.nix  io.github.enginkirmaci.lumux.yml  lumux.nix.off  main.py  pyproject.toml  python3-modules.json
config/: settings_manager.py
data/: default_settings.json  io.github.enginkirmaci.lumux.metainfo.xml
gui/: bridge_wizard.py  main_window.py  settings_dialog.py  tray_icon.py  zone_preview_widget.py
lumux/: app_context.py  black_bar_detector.py  bridge_client.py  capture.py  colors.py  entertainment.py  mode_manager.py  reading_mode.py  sync.py  zones.py
lumux/utils/: rgb_xy_converter.py
src/lumux/gui/: main_window.py
