[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumux"
version = "0.5.0"
description = "Philips Hue Sync for Linux on Wayland"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Engin Kırmacı"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Desktop Environment",
]
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pydbus>=0.6.0",
    "zeroconf>=0.60.0",
]

[project.scripts]
lumux = "main:main"

[project.urls]
Homepage = "https://github.com/enginkirmaci/lumux"
Issues = "https://github.com/enginkirmaci/lumux/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumux*", "gui*", "config*", "utils*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.data-files]
"share/lumux/data" = ["data/default_settings.json"]
"share/applications" = ["data/io.github.enginkirmaci.lumux.desktop"]
"share/metainfo" = ["data/io.github.enginkirmaci.lumux.metainfo.xml"]
"share/icons/hicolor/scalable/apps" = ["io.github.enginkirmaci.lumux.svg"]
